# rag-squad

./: First_langchain.ipynb  README.md  pyproject.toml  rag.ipynb  results.csv
data/processed/: .gitignore
data_exploration/: Data read.ipynb
notebooks/: 00_data_exploration.ipynb  01_data_processing.ipynb  02_mixedbread.ipynb  03_mixedbread_normalization.ipynb  04_google_gemma.ipynb  05_question_reduction.ipynb  06_testing_with_noise.ipynb  07_rag.ipynb  utils.py
