[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.1",
    "datasets>=4.5.0",
    "jupyter>=1.1.1",
    "langchain[retrievers]>=1.2.6",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "transformers>=4.57.6",
]
